--- a/res/layout/fsuvius_item.xml
+++ b/res/layout/fsuvius_item.xml
@@ -4,25 +4,35 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
+	<Button
+	    android:id="@+id/dock10"
+	    android:layout_width="50dp"
+	    android:layout_height="wrap_content"
+	    android:text="@string/dock10Str" />
+
     <Button
         android:id="@+id/dock"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
         android:text="@string/dockStr" />
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="10.12"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal|center_vertical" />
 
     <Button
         android:id="@+id/boost"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
         android:text="@string/boostStr" />
+
+    <Button
+        android:id="@+id/boost10"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:text="@string/boost10Str" />
 
 </LinearLayout>
